--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,6 +22,10 @@ jobs:
     # Указывает, на каком типе машины запускать задачу.
     # В данном случае — на виртуальной машине с Ubuntu.
     runs-on: ubuntu-latest
+    
+    defaults:
+      run:
+        working-directory: ./frontend
 
     # Используем стратегию "matrix", чтобы запустить задачу несколько раз с разными параметрами.
     # Здесь мы указываем, что нужно запустить тесты для нескольких версий Node.js.
@@ -45,14 +49,11 @@ jobs:
 
     # Шаг 3: Устанавливаем зависимости из package-lock.json (или npm-shrinkwrap.json).
     # `npm ci` используется вместо `npm install`, так как он быстрее и надежнее.
-    - working-directory: ./frontend
-      run: npm ci
+    - run: npm ci
 
     # Шаг 4: Запускаем скрипт `build`, если он определён в package.json.
     # `--if-present` означает, что ошибка не возникнет, если скрипт `build` не найден.
-    - working-directory: ./frontend
-      run: npm run build --if-present
+    - run: npm run build --if-present
 
     # Шаг 5: Запускаем тесты.
-    - working-directory: ./frontend
-      run: npm test
+    - run: npm test
