--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -48,6 +48,12 @@ jobs:
         cache-dependency-path: ./frontend
         cache: 'npm'
 
+    - name: Clean install
+      run: |
+        rm -rf node_modules
+        rm -f package-lock.json
+        npm install
+        
     # Шаг 3: Устанавливаем зависимости из package-lock.json (или npm-shrinkwrap.json).
     # `npm ci` используется вместо `npm install`, так как он быстрее и надежнее.
     - run: npm ci
