--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.22",
+    "@vue-flow/additional-components": "^1.3.3",
+    "@vue-flow/core": "^1.48.0",
+    "@vue-flow/node-resizer": "^1.5.0",
     "axios": "^1.13.2",
     "pinia": "^3.0.4",
+    "vue": "^3.5.22",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
