--- a/compose.yml
+++ b/compose.yml
@@ -1,13 +1,13 @@
 services:
   backend:
     build: ./backend/
-    container_name: "backend"
+    container_name: "all-backend"
     restart: unless-stopped
     ports:
       - 2026:8001
     environment:
       PORT: 8001
-      database_url: postgresql://postgre:passgre@postgresql:5432/english
+      database_url: postgresql://postgre:passgre@all-postgresql:5432/english
       app_name: "English courses"
       debug: "true"
       static_dir: "static"
@@ -22,7 +22,7 @@ services:
 
   database:
     image: 'postgres:15.15'
-    container_name: "postgresql"
+    container_name: "all-postgresql"
     restart: unless-stopped
     expose:
       - 5432
@@ -37,7 +37,7 @@ services:
 
   pgadmin:
     image: 'dpage/pgadmin4:9.10'
-    container_name: "pgadmin"
+    container_name: "all-pgadmin"
     restart: unless-stopped
     ports:
       - 2028:80
@@ -56,7 +56,7 @@ services:
       context: ./frontend/
       args:
         VITE_API_URL: "http://127.0.0.1:2026"
-    container_name: "frontend"
+    container_name: "all-frontend"
     restart: unless-stopped
     ports:
       - 2027:80
