--- a/frontend/compose.yml
+++ b/frontend/compose.yml
@@ -4,7 +4,7 @@ services:
       context: .
       args:
         VITE_API_URL: "http://127.0.0.1:2026"
-    container_name: "frontend"
+    container_name: "frontend-frontend"
     restart: unless-stopped
     ports:
       - 2027:80
