added prometheus docker and config files

--- a/compose.yml
+++ b/compose.yml
@@ -65,6 +65,32 @@ services:
     networks:
       - all
 
+  prometheus:
+    image: prom/prometheus:v3.8.0
+    container_name: all-prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./monitoring/.prometheus_data:/prometheus
+    networks:
+      - all
+
+  grafana:
+    image: grafana/grafana:12.1
+    container_name: all-grafana
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./monitoring/grafana/datasource.yml:/etc/grafana/provisioning/datsources/datasource.yml
+      - ./monitoring/.grafana_data:/var/lib/grafana
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=password
+    networks:
+      - all
+
+
 networks:
   all:
     external: false
